# Roads

./: .gitignore  CMakeLists.txt  README.md  build.sh
docs/: Concept document.md
src/Game/: main.cpp
src/Game/Core/: GameLoop.cpp  GameLoop.hpp  Helpers.cpp  Helpers.hpp  InputHandler.cpp  InputHandler.hpp  Stager.cpp  Stager.hpp
src/Game/Rendering/: CameraController.cpp  CameraController.hpp  GridRender.cpp  GridRender.hpp  RoadRenderer.cpp  RoadRenderer.hpp
src/Game/Roads/: PathFindingService.hpp  RoadAlgorythms.hpp  RoadBuilderService.cpp  RoadBuilderService.hpp  RoadManager.cpp  RoadManager.hpp  RoadPlacement.cpp  RoadTile.cpp
src/Game/Traffic/: TrafficManager.cpp  TrafficManager.hpp  TrafficNode.cpp  TrafficNode.hpp  Vehicle.cpp  Vehicle.hpp
src/Game/UI/: Helpers.hpp  UIManager.cpp  UIManager.hpp  UIMenu.cpp  UIMenu.hpp
src/Game/World/: TerrainGen.cpp  TerrainGen.hpp  World.cpp  World.hpp
src/Imports/raylib-5.5_macos/include/: raymath.h
src/Obsolete/: RoadManager.cpp  RoadPlacement.cpp  RoadPlacement.hpp  RoadTile.hpp  Tile.hpp
